--- a/FakeHiveServer/APIServer.csproj
+++ b/FakeHiveServer/APIServer.csproj
@@ -13,7 +13,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+        <PackageReference Include="MySqlConnector" Version="2.3.3" />
+        <PackageReference Include="SqlKata" Version="2.4.0" />
+        <PackageReference Include="SqlKata.Execution" Version="2.4.0" />
         <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
         <PackageReference Include="System.Net.Security" Version="4.3.2" />
         <PackageReference Include="ZLogger" Version="1.7.1" />
