--- a/00_ServerBin/APIServer/net8.0/appsettings.Development.json
+++ b/00_ServerBin/APIServer/net8.0/appsettings.Development.json
@@ -11,5 +11,6 @@
   "ServerAddress": "http://localhost:11502",
   "DbConfig": {
     "HiveDb": "Server=127.0.0.1;user=root;Password=Rlatjd095980!;Database=hive;Pooling=true;Min Pool Size=0;Max Pool Size=40;AllowUserVariables=True;"
-  }
+  },
+  "TokenSaltValue": "akj3ife09r3jflkajdsi3ur0dlkuj3"
 }
