--- a/FakeHiveServer/HiveAPIServer.csproj
+++ b/FakeHiveServer/HiveAPIServer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -13,9 +13,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="CloudStructures" Version="3.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
-        <PackageReference Include="MySqlConnector" Version="2.3.1" />
+        <PackageReference Include="MySqlConnector" Version="2.3.3" />
         <PackageReference Include="SqlKata" Version="2.4.0" />
         <PackageReference Include="SqlKata.Execution" Version="2.4.0" />
         <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
@@ -27,12 +27,6 @@
         <Compile Remove="MigratorHostedService.cs" />
         <Compile Remove="Worlds.cs" />
         <Compile Remove="MasterData.cs" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Controllers\Character\" />
-      <Folder Include="Model\DTO\Character\" />
-      <Folder Include="Model\DTO\Item\" />
     </ItemGroup>
 
 
